Piccoli fix report

--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -47,8 +47,8 @@
     linkcolor=blue,
     filecolor=blue,      
     urlcolor=blue,
-    pdftitle={Simulazione di Sistemi - Report progetto},
-    pdfauthor={Marco Ferrati}
+    pdftitle={Compilatori e Interpreti - Report progetto SimpLanPlus},
+    pdfauthor={Marco Ferrati, Tommaso Azzalin}
     bookmarks=true,
     pdfpagemode=FullScreen,
 }
@@ -57,7 +57,7 @@
 \renewcommand{\footrulewidth}{0.4pt} 
 \fancyhf{}
 \fancyhead[L]{\leftmark}
-\fancyhead[R]{Compilatori e Interpreti -  Report progetto}
+\fancyhead[R]{Compilatori e Interpreti -  Report progetto ``SimpLanPlus"}
 \fancyfoot[L]{Marco Ferrati, Tommaso Azzalin}
 \fancyfoot[R]{Pagina \thepage\ di \pageref*{LastPage}}
 \setlength{\headheight}{14.5pt}
