--- a/report/report.tex
+++ b/report/report.tex
@@ -3,7 +3,7 @@
 
 \usepackage{configuration/style}
 
-\title{Alma Mater Studiorum - Università di Bologna \\ LM Informatica \\ \textbf{Compilatori e Interpreti - Report progetto}}
+\title{Alma Mater Studiorum - Università di Bologna \\ LM Informatica \\ \textbf{Compilatori e Interpreti - Report progetto ``SimpLanPlus"}}
 \author{Marco Ferrati, Tommaso Azzalin}
 \date{A.A. 2020/2021}
 
@@ -24,7 +24,7 @@
 
 \subfile{chapters/grammatica}
 
-\subfile{chapters/anaslisisemantica}
+\subfile{chapters/analisisemantica}
 
 \subfile{chapters/analisieffetti}
 
