--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -74,3 +74,19 @@
     \parbox[b]{9em}{\hfill{\color{cyan}\bfseries\sffamily #1}~$\cdots\cdots$~}\makebox[0pt][c]{$\bullet$}\vrule\quad \parbox[c]{10cm}{\vspace{14pt}\color{red!40!black!80}\raggedright\sffamily #2.\\[17pt]}\\[-3pt]}
 
 \DeclareGraphicsExtensions{.png,.jpg}
+
+
+\lstdefinestyle{antlr}{
+    basicstyle=\small\ttfamily\color{black},
+    breaklines=true, % allow line breaks
+    moredelim=[s][\color{blue}\ttfamily]{'}{'}, % single quotes in green
+    moredelim=*[s][\color{black}\ttfamily]{options}{\}}, % options in black (until trailing })
+    commentstyle={\color{green!50!black}\itshape}, % gray italics for comments
+    morecomment=[l]{//}, % define // comment
+    emph={
+        STRING % literal strings listed here
+        },emphstyle={\color{blue}\ttfamily}, % and formatted in blue
+    alsoletter={:,|,;},
+    morekeywords={:,|,;}, % define the special characters
+    keywordstyle={\color{black}}, % and format them in black
+}
