--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -90,3 +90,14 @@
     morekeywords={:,|,;}, % define the special characters
     keywordstyle={\color{black}}, % and format them in black
 }
+
+\lstset{
+    tabsize = 4, %% set tab space width
+    showstringspaces = false, %% prevent space marking in strings, string is defined as the text that is generally printed directly to the console
+    commentstyle = \color{green}, %% set comment color
+    keywordstyle = \color{blue}, %% set keyword color
+    stringstyle = \color{red}, %% set string color
+    basicstyle = \small \ttfamily , %% set listing font and size
+    breaklines = true, %% enable line breaking
+    numberstyle = \tiny,
+}
