--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -26,6 +26,7 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{listings}
+\usepackage{mnsymbol}
 \usepackage[title]{appendix}
 
 \usepackage[tikz]{bclogo}
