--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -26,7 +26,7 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{listings}
-\usepackage{mnsymbol}
+\usepackage{MnSymbol}
 \usepackage[title]{appendix}
 
 \usepackage[tikz]{bclogo}
