--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -95,7 +95,7 @@
 \lstset{
     tabsize = 4, %% set tab space width
     showstringspaces = false, %% prevent space marking in strings, string is defined as the text that is generally printed directly to the console
-    commentstyle = \color{green}, %% set comment color
+    commentstyle = \color{green!50!black}, %% set comment color
     keywordstyle = \color{blue}, %% set keyword color
     stringstyle = \color{red}, %% set string color
     basicstyle = \small \ttfamily , %% set listing font and size
