Fix config latex

--- a/report/configuration/style.sty
+++ b/report/configuration/style.sty
@@ -49,7 +49,7 @@
     filecolor=blue,      
     urlcolor=blue,
     pdftitle={Compilatori e Interpreti - Report progetto SimpLanPlus},
-    pdfauthor={Marco Ferrati, Tommaso Azzalin}
+    pdfauthor={Marco Ferrati, Tommaso Azzalin},
     bookmarks=true,
     pdfpagemode=FullScreen,
 }
